--- a/Resourses/host_01/index.html
+++ b/Resourses/host_01/index.html
@@ -2,5 +2,10 @@
   <body>
     <h1>It works!</h1>
 	from first host
+	<br/>  
+	image png <br/>
+    <img src="/image.png"></img>
+	image jpg <br/>
+    <img src="/photo.jpg"></img>
   </body>
 </html>
