fix bug looping in reseiving emty message

--- a/Resourses/host_01/index.html
+++ b/Resourses/host_01/index.html
@@ -3,9 +3,11 @@
     <h1>It works!</h1>
 	from first host
 	<br/>  
-	image png <br/>
-    <img src="/image.png"></img>
-	image jpg <br/>
-    <img src="/photo.jpg"></img>
+	image png<br/>
+    <img src="/image.png"></img><br/>
+	image jpg<br/>
+    <img src="/photo.jpg"></img><br/>
+	gif image<br/>
+	<image src="banana.gif"></image>
   </body>
 </html>
