add IMIME opportunity handle several files

--- a/Resourses/host_02/index.html
+++ b/Resourses/host_02/index.html
@@ -2,5 +2,8 @@
   <body>
     <h1>It works!</h1>
 	from second host
+  <br/>
+  <p><a href="avatar.jpg">Открыть файл в браузере</a>
+  <p><a href="avatar.jpg" download>Скачать файл</a>
   </body>
 </html>
