--- a/Resourses/host_02/index.html
+++ b/Resourses/host_02/index.html
@@ -1,9 +1,12 @@
 <html>
   <body>
     <h1>It works!</h1>
-	from second host
-  <br/>
-  <p><a href="avatar.jpg">Открыть файл в браузере</a>
-  <p><a href="avatar.jpg" download>Скачать файл</a>
+  	from second host
+    <br/>
+    <p><a href="avatar.jpg">Открыть файл в браузере</a>
+    <p><a href="avatar.jpg" download>Скачать файл</a>
+    <br/>
+    <p><a href="/folder.png"><img src="/folder.png" height="20"></img>Directory</a>
+    <p><a href="/file.png"><img src="/file.png" height="20"></img>File</a>
   </body>
 </html>
