add reourses manager

--- a/Resourses/host_02/index.html
+++ b/Resourses/host_02/index.html
@@ -6,7 +6,7 @@
     <p><a href="avatar.jpg">Открыть файл в браузере</a>
     <p><a href="avatar.jpg" download>Скачать файл</a>
     <br/>
-    <p><a href="/folder.png"><img src="/folder.png" height="20"></img>Directory</a>
-    <p><a href="/file.png"><img src="/file.png" height="20"></img>File</a>
+    <p><a href="WebServerResourses/folder.png"><img src="WebServerResourses/folder.png" height="20"></img>Directory</a>
+    <p><a href="WebServerResourses/file.png"><img src="WebServerResourses/file.png" height="20"></img>File</a>
   </body>
 </html>
