clear debug and remove old comments

--- a/Resourses/host_01/index.html
+++ b/Resourses/host_01/index.html
@@ -4,7 +4,7 @@
     function myFunction() {
       $.ajax({
             type:'post',//тип запроса: get,post либо head
-            url:'post_test.html',//url адрес файла обработчика
+            url:'post_test.txt',//url адрес файла обработчика
             data:{'z':'1', 'nano':'10^-9'},//параметры запроса
             //response:'text',//тип возвращаемого ответа text либо xml
             success:function (data) {//возвращаемый результат от сервера
