start fixes various bugs in receive

--- a/Resourses/host_01/index.html
+++ b/Resourses/host_01/index.html
@@ -1,50 +1,58 @@
+<!DOCTYPE html>
 <html>
-  <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-  <script type="text/javascript">
-    function myFunction() {
-      $.ajax({
-            type:'post',//тип запроса: get,post либо head
-            url:'post_test.txt',//url адрес файла обработчика
-            data:{'z':'1', 'nano':'10^-9'},//параметры запроса
-            //response:'text',//тип возвращаемого ответа text либо xml
-            success:function (data) {//возвращаемый результат от сервера
-              alert(data);
-            }
-      });
-    }
-    function writeMeSubmit(form){
-    	//создаем экземпляр класс FormData, тут будем хранить всю информацию для отправки
-    	var formData = new FormData(form);
-
-    	//присоединяем наш файл
-      jQuery.each($('#file_v')[0].files, function(i, file) {
-    		formData.append('file_v', file);
-    	});
-
-    	//отправляем через ajax
-    	$.ajax({
-    		url: "/ajax_form.php",
-    		type: "POST",
-    		dataType : "json",
-    		cache: false,
-    		contentType: false,
-    		processData: false,
-    		data: formData, //указываем что отправляем
-    		success: function(data){
-
-    		}
-    	});
-
-    	return false;
-    }
-  </script>
+  <head>
+    <meta charset="utf-8">
+    <title>Test page for web-server</title>
+  </head>
   <body>
+    <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+    <script type="text/javascript">
+      function myFunction() {
+        $.ajax({
+              type:'post',//тип запроса: get,post либо head
+              url:'post_test.txt',//url адрес файла обработчика
+              data:{'z':'1', 'nano':'10^-9'},//параметры запроса
+              //response:'text',//тип возвращаемого ответа text либо xml
+              success:function (data) {//возвращаемый результат от сервера
+                alert(data);
+              }
+        });
+      }
+      function writeMeSubmit(form){
+        //создаем экземпляр класс FormData, тут будем хранить всю информацию для отправки
+        var formData = new FormData();
+        for (var i = 0; i < form.length; i++) {
+          if (form[i].type == 'text') {
+            formData.append(form[i].name, form[i].value);
+          }
+          else if (form[i].type == 'file') {
+            formData.append(form[i].name, form[i].files[0]);
+          }
+        }
+
+        //отправляем через ajax
+        $.ajax({
+          url: "/ajax_form",
+          type: "POST",
+          dataType : "json",
+          cache: false,
+          contentType: false,
+          processData: false,
+          data: formData, //указываем что отправляем
+          success: function(data){
+
+          }
+        });
+
+        return false;
+      }
+    </script>
     <h1>It works!</h1>
     <button onclick="myFunction()">push me</button><br/>
     <form action="" onsubmit="return writeMeSubmit(this);">
       <input name="name" value="Имя">
       <input name="surname" value="Фамилия">
-    	<input id="file_v" type="file" />
+    	<input name="file_v" type="file" />
     	<input type="submit" value="send">
     </form>
   	from first host
