adding exception factory now available add exception as module

--- a/Resourses/host_01/index.html
+++ b/Resourses/host_01/index.html
@@ -48,6 +48,7 @@
       }
     </script>
     <h1>It works!</h1>
+    from first host<br/>
     <button onclick="myFunction()">push me</button><br/>
     <form action="" onsubmit="return writeMeSubmit(this);">
       <input name="name" value="Имя">
@@ -55,8 +56,7 @@
     	<input name="file_v" type="file" />
     	<input type="submit" value="send">
     </form>
-  	from first host
-  	<br/>
+    <a href="README.md" download>About this web-server</a><br/>
   	image png<br/>
     <img src="/image.png"></img><br/>
   	image jpg<br/>
