adding websocket protocol

--- a/Resourses/host_02/index.html
+++ b/Resourses/host_02/index.html
@@ -14,7 +14,8 @@
     <h1>It works!</h1>
   	from second host
     <br/>
-    <button onclick="send(document.getElementById('message').value)">send to WebSocket</button><input id="message" type="text"></input><br/>
+    <button onclick="send(document.getElementById('message').value)">send to WebSocket</button><textarea id="message" type="text" cols="100" rows="10"></textarea><br/>
+    <button onclick="connect()">connect form WebSocket</button><br/>
     <p><a href="avatar.jpg">Открыть файл в браузере</a>
     <p><a href="avatar.jpg" download>Скачать файл</a>
     <br/>
